--- a/6.23zuoye1/new_file.html
+++ b/6.23zuoye1/new_file.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 	</head>
 	<body>
 		<strong>热门活动&nbsp;&nbsp;&nbsp;更多</strong>
